--- a/luffy.html
+++ b/luffy.html
@@ -191,7 +191,7 @@
     </header>
     <main class="detail-content">
         <h1>Monkey D. Luffy</h1>
-        <img src="image_0d921e.jpg" alt="Monkey D. Luffy">
+        <img src="One piece/luffy_wanted_poster_by_mrmorris12_dgzczh7-414w-2x.jpg" alt="Monkey D. Luffy">
         <p>Monkey D. Luffy, also known as "Straw Hat Luffy", is the founder and captain of the Straw Hat Pirates. His lifelong dream is to become the Pirate King by finding the legendary treasure left by the late Gol D. Roger. He has the power of the Gum-Gum Fruit, allowing him to stretch his body like rubber.</p>
         <a href="OnePieceFanPage.html" class="back-btn">Back to Main Page</a>
     </main>
@@ -203,3 +203,4 @@
     </footer>
 </body>
 </html>
+
