--- a/nami.html
+++ b/nami.html
@@ -191,7 +191,7 @@
     </header>
     <main class="detail-content">
         <h1>Nami</h1>
-        <img src="https://placehold.co/250x350/ffb95e/000000?text=Nami" alt="Nami">
+        <img src="One piece/nami_wanted_poster_by_mrmorris12_dgzd2rb-414w-2x.jpg" alt="Nami">
         <p>Nami, known as "Cat Burglar" Nami, is the navigator of the Straw Hat Pirates. She has an exceptional talent for cartography and meteorology. Her dream is to create a complete map of the entire world.</p>
         <a href="OnePieceFanPage.html" class="back-btn">Back to Main Page</a>
     </main>
@@ -203,3 +203,4 @@
     </footer>
 </body>
 </html>
+
