--- a/sanji.html
+++ b/sanji.html
@@ -186,7 +186,7 @@
     </header>
     <main class="detail-content">
         <h1>Vinsmoke Sanji</h1>
-        <img src="https://placehold.co/250x350/ffe68a/000000?text=Sanji" alt="Vinsmoke Sanji">
+        <img src="One piece/sanji_wanted_poster_by_mrmorris12_dgzd3iu-350t-2x.jpg" alt="Vinsmoke Sanji">
         <p>Vinsmoke Sanji, often referred to as "Black Leg" Sanji, is the cook of the Straw Hat Pirates. He is a master of the "Black Leg Style" of martial arts, which he uses to fight opponents with only his legs. His dream is to find the All Blue, a legendary sea where all four seas and their fish species meet.</p>
         <a href="OnePieceFanPage.html" class="back-btn">Back to Main Page</a>
     </main>
@@ -198,3 +198,4 @@
     </footer>
 </body>
 </html>
+
