--- a/zoro.html
+++ b/zoro.html
@@ -186,7 +186,7 @@
     </header>
     <main class="detail-content">
         <h1>Roronoa Zoro</h1>
-        <img src="image_00e341.jpg" alt="Roronoa Zoro">
+        <img src="One piece/zoro_wanted_poster_by_mrmorris12_dgzd1qb-414w-2x.jpg" alt="Roronoa Zoro">
         <p>Roronoa Zoro, known as "Pirate Hunter" Zoro, is the combatant of the Straw Hat Pirates. He is a master swordsman who uses the unique Three Sword Style. His goal is to become the world's greatest swordsman.</p>
         <a href="OnePieceFanPage.html" class="back-btn">Back to Main Page</a>
     </main>
@@ -198,3 +198,4 @@
     </footer>
 </body>
 </html>
+
