--- a/onepiece.html
+++ b/onepiece.html
@@ -528,35 +528,35 @@
                                 <p>Sniper</p>
                             </div>
                         </a>
-                        <a href="#" class="character-card" data-title="Nico Robin" data-image="https://placehold.co/250x350/5666b6/ffffff?text=Nico+Robin" data-description="Nico Robin, the &quot;Devil Child&quot;, is the archaeologist of the Straw Hat Pirates. She has the power of the Hana Hana no Mi (Flower-Flower Fruit), which allows her to sprout body parts on any surface. Her dream is to find the Rio Poneglyph and learn the true history of the world.">
+                        <a href="#" class="character-card" data-title="Nico Robin" data-image="One piece/robin_wanted_poster_by_mrmorris12_dgzd489-350t-2x.jpg" data-description="Nico Robin, the &quot;Devil Child&quot;, is the archaeologist of the Straw Hat Pirates. She has the power of the Hana Hana no Mi (Flower-Flower Fruit), which allows her to sprout body parts on any surface. Her dream is to find the Rio Poneglyph and learn the true history of the world.">
                             <img src="One piece/robin_wanted_poster_by_mrmorris12_dgzd489-350t-2x.jpg" alt="Nico Robin">
                             <div class="card-content">
                                 <h3>Nico Robin</h3>
                                 <p>Archaeologist</p>
                             </div>
                         </a>
-                        <a href="#" class="character-card" data-title="Franky" data-image="https://placehold.co/250x350/33b0e3/ffffff?text=Franky" data-description="Franky, &quot;Cyborg&quot; Franky, is the shipwright of the Straw Hat Pirates. He is a cyborg who has built a number of useful tools and machines. His dream is to build a ship that can travel to the end of the Grand Line.">
+                        <a href="#" class="character-card" data-title="Franky" data-image="One piece/franky_wanted_poster_by_mrmorris12_dgzd5bq-350t-2x.jpg" data-description="Franky, &quot;Cyborg&quot; Franky, is the shipwright of the Straw Hat Pirates. He is a cyborg who has built a number of useful tools and machines. His dream is to build a ship that can travel to the end of the Grand Line.">
                             <img src="One piece/franky_wanted_poster_by_mrmorris12_dgzd5bq-350t-2x.jpg" alt="Franky">
                             <div class="card-content">
                                 <h3>Franky</h3>
                                 <p>Shipwright</p>
                             </div>
                         </a>
-                        <a href="#" class="character-card" data-title="Brook" data-image="https://placehold.co/250x350/1c1c1c/ffffff?text=Brook" data-description="Brook, &quot;Soul King&quot; Brook, is the musician of the Straw Hat Pirates. He ate the Yomi Yomi no Mi (Revive-Revive Fruit), which allows him to return to life after death. His dream is to reunite with his friend Laboon, a whale he promised to return to years ago.">
+                        <a href="#" class="character-card" data-title="Brook" data-image="One piece/brook_wanted_poster_by_mrmorris12_dgzd5y7-350t-2x.jpg" data-description="Brook, &quot;Soul King&quot; Brook, is the musician of the Straw Hat Pirates. He ate the Yomi Yomi no Mi (Revive-Revive Fruit), which allows him to return to life after death. His dream is to reunite with his friend Laboon, a whale he promised to return to years ago.">
                             <img src="One piece/brook_wanted_poster_by_mrmorris12_dgzd5y7-350t-2x.jpg" alt="Brook">
                             <div class="card-content">
                                 <h3>Brook</h3>
                                 <p>Musician</p>
                             </div>
                         </a>
-                        <a href="#" class="character-card" data-title="Tony Tony Chopper" data-image="https://placehold.co/250x350/d2a3a5/ffffff?text=Chopper" data-description="Tony Tony Chopper, the doctor of the Straw Hat Pirates, is a blue-nosed reindeer who ate the Human-Human Fruit, allowing him to transform into various forms. His dream is to become a doctor who can cure any disease.">
+                        <a href="#" class="character-card" data-title="Tony Tony Chopper" data-image="One piece/chopper_wanted_poster_by_mrmorris12_dgzd3xg-350t-2x.jpg" data-description="Tony Tony Chopper, the doctor of the Straw Hat Pirates, is a blue-nosed reindeer who ate the Human-Human Fruit, allowing him to transform into various forms. His dream is to become a doctor who can cure any disease.">
                             <img src="One piece/chopper_wanted_poster_by_mrmorris12_dgzd3xg-350t-2x.jpg" alt="Tony Tony Chopper">
                             <div class="card-content">
                                 <h3>Tony Tony Chopper</h3>
                                 <p>Doctor</p>
                             </div>
                         </a>
-                        <a href="#" class="character-card" data-title="Jinbe" data-image="https://placehold.co/250x350/1e83c7/ffffff?text=Jinbe" data-description="Jinbe, also known as &quot;Knight of the Sea&quot;, is a former Warlord of the Sea and the helmsman of the Straw Hat Pirates. He is a master of Fish-Man Karate. His dream is to fulfill his duties as a Fish-Man and a member of the Straw Hat crew.">
+                        <a href="#" class="character-card" data-title="Jinbe" data-image="One piece/jinbe_wanted_poster_by_mrmorris12_dgzdan4-350t-2x.jpg" data-description="Jinbe, also known as &quot;Knight of the Sea&quot;, is a former Warlord of the Sea and the helmsman of the Straw Hat Pirates. He is a master of Fish-Man Karate. His dream is to fulfill his duties as a Fish-Man and a member of the Straw Hat crew.">
                             <img src="One piece/jinbe_wanted_poster_by_mrmorris12_dgzdan4-350t-2x.jpg" alt="Jinbe">
                             <div class="card-content">
                                 <h3>Jinbe</h3>
@@ -680,3 +680,4 @@
     </script>
 </body>
 </html>
+
