--- a/onepiece.html
+++ b/onepiece.html
@@ -411,7 +411,7 @@
                     <h2>1142 EPISODES AVAILABLE</h2>
                     <h1>One Piece</h1>
                     <p>Monkey D. Luffy refuses to let anyone or anything stand in the way of his quest to become king of all pirates. With a course charted for the treacherous waters of the Grand Line and beyond, this is one captain who'll never give up until he's claimed the greatest treasure on Earth: the Legendary One Piece!</p>
-                    <a href="#" class="watch-trailer-btn">
+                    <a href="https://www.youtube.com/watch?v=MCb13lbVGE0" target="_blank" rel="noopener noreferrer" class="watch-trailer-btn">
                         <span class="play-icon"></span>
                         WATCH TRAILER
                     </a>
@@ -556,3 +556,4 @@
     </script>
 </body>
 </html>
+
